Adjust spacing and fix selection highlighting

--- a/client/src/Components/TreeView/tree-view.css
+++ b/client/src/Components/TreeView/tree-view.css
@@ -1,8 +1,12 @@
+.package-name {
+    margin: 1rem 1rem .5rem;
+}
+
 .tree {
     padding-left: 0;
 }
 
-.treeViewDiv{
+.treeViewDiv {
     overflow: auto;
     white-space: nowrap;
 }
@@ -11,17 +15,14 @@
     padding-left: 2rem;
 }
 
-.module-name {
-    padding-left: .5rem;
-}
-
-.class-name {
-    padding-left: .5rem;
+.indicator {
+    display: inline-block;
+    width: 1rem;
 }
 
 .visibility-indicator {
-    display: inline-block;
-    width: 1rem;
+    margin-left: -1rem;
+    margin-right: 0.5rem;
 }
 
 .module-content {
@@ -32,12 +33,36 @@
     padding-left: 1rem;
 }
 
+.pl-1-5rem {
+    padding-left: 1.5rem;
+}
+
+.pl-2rem {
+    padding-left: 2rem;
+}
+
 .pl-2-5rem {
     padding-left: 2.5rem;
 }
 
+.pl-3rem {
+    padding-left: 3rem;
+}
+
+.pl-3-5rem {
+    padding-left: 3.5rem;
+}
+
 .pl-4rem {
     padding-left: 4rem;
+}
+
+.pl-4-5rem {
+    padding-left: 4.5rem;
+}
+
+.pl-5rem {
+    padding-left: 5rem;
 }
 
 .selected {
